--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 
-  background-image:url("https://api.deepai.org/job-view-file/1566d0a3-b6fc-457d-b1d9-310c004c19bd/outputs/output.jpg");
+  background-image:url("img/output.jpg");
     background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
